fix cutting off links, keep no scroll

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -31,21 +31,23 @@ body {
   text-align: center;
   border-radius: 15px;
   width: 100%;
-  height: 100%;
-  padding: 40px 0;
+  min-height: 100%;
+  height: auto;
+  padding: 20px 0;
   box-sizing: border-box;
+  justify-content: space-between;
 }
 
 .logo-container {
   background-color: rgb(255, 255, 255, .9);
   padding: 30px 40px;  /* Increased padding to give more space */
   border-radius: 40px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   display: inline-block;
   text-align: center;
   width: fit-content;
   max-width: 500px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .logo {
@@ -61,7 +63,7 @@ ul {
   justify-content: center;
   gap: 20px;
   padding: 0;
-  margin: 20px auto;
+  margin: 10px auto;
   position: relative;
   width: 70%;
   max-width: 500px;
@@ -90,7 +92,7 @@ li {
   background-color: rgb(255, 255, 255, .9);
   text-align: center;
   border-radius: 30px;
-  margin: 20px auto;
+  margin: 10px auto;
   z-index: 2;
   display: block;
   width: 60%;
